alignment fix

--- a/src/css/sumo.scss
+++ b/src/css/sumo.scss
@@ -259,7 +259,7 @@ html[data-theme='light'] {
   align-items: center;
   cursor: pointer;
   color: white !important; /* Text color should be white */
-  border: .5px solid rgba(255, 255, 255, 0.2); /* Border matching the style */
+  border: 1px solid rgba(255, 255, 255, 0.2); /* Border matching the style */
   border-radius: 3px;
   padding: 5px 15px;
   font-size: 13px;
